--- a/HOJA4/.gitignore
+++ b/HOJA4/.gitignore
@@ -5,3 +5,8 @@
 /Principal.class
 /ReadFileExample.class
 /StackHandmade.class
+/DoublyLinkedList.class
+/SinglyLinkedList.class
+/DriverProgram.class
+/registro.class
+/ListFactory.class
