ajustes y algunos milagros
primero dios sale algo

--- a/HOJA4/.gitignore
+++ b/HOJA4/.gitignore
@@ -10,3 +10,6 @@
 /DriverProgram.class
 /registro.class
 /ListFactory.class
+/Singlenton.class
+/IPostfixCalculatorTest.class
+/infixtopostfix.class
